...
    "alert.cancel": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Cancel"
          }
        }
      }
    },
    "alert.customColor.apply": {
      "extractionState": "manual",
...
    "dialog.closeWindow.title": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Close window?"
          }
        }
      }
    },
    "dialog.closeWorkspace.message": {
      "extractionState": "manual",
...
    "dialog.closeWorkspace.title": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Close workspace?"
          }
        }
      }
    },
    "dialog.closeWorkspaces.message": {
      "extractionState": "manual",
...
